rectification en version mobile : barre grise fixée

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@
     display: none;
   }
 
-  #icone-localisation, #icone-localisation-loupe{
+   #icone-localisation{ 
     position: relative;
     width: 50px;
     height: 49px;
@@ -236,7 +236,6 @@
     background: #F2F2F2;
     border-radius: 20px;
     max-width: 70%;
-    /* height: 65%; */
   }
 
   #bloc-hebergements h1{
@@ -296,8 +295,6 @@
     background: #F2F2F2;
     border-radius: 20px;
     width: 28%;
-    /* height: 65%; */
-    
   }
 
   #bloc-populaires h1{
@@ -372,8 +369,7 @@
 
   #cartes-hebergements-et-populaires{
     display: flex;
-    /* justify-content: space-between; */
-  }
+ }
 
   /*Troisième section*/
   #bloc-activites{
@@ -605,15 +601,10 @@
 
       #barre-loupe{   /*zone de recherche  */
         display: flex;
+        max-width: 98%;
         margin: 70px 0px 60px 0px; 
       }
 
-      #icone-localisation-loupe{
-        width: 100px;
-        height: 90px;
-        border-radius: 38px 0px 0px 38px; 
-      }
-    
       .fa-location-dot{
         padding: 24px 0px 0px 35px; 
         font-size: 2.25em;
@@ -626,6 +617,8 @@
         padding-left: 30px;
         background-color: #FFFFFF;
         border: 2px solid #F2F2F2;
+        border-left: 90px solid #F2F2F2;
+        border-radius: 38px 0px 0px 38px;
       }
     
       #loupe{    /* bouton cliquable pour valider notre recherche */
